# gpu-based-image-stitching

./: .gitignore  CMakeLists.txt
include/: app.h  image_stitcher.h  stitching_param_generater.h
src/: app.cc  image_stitcher.cc  stitching_param_generater.cc
